; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_recoveryPausesHere.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xlog.c_recoveryPausesHere.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LocalHotStandbyActive = common dso_local global i32 0, align 4
@LOG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"recovery has paused\00", align 1
@.str.1 = private unnamed_addr constant [44 x i8] c"Execute pg_wal_replay_resume() to continue.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @recoveryPausesHere to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @recoveryPausesHere() #0 {
  %1 = load i32, i32* @LocalHotStandbyActive, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %15

4:                                                ; preds = %0
  %5 = load i32, i32* @LOG, align 4
  %6 = call i32 @errmsg(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @errhint(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @ereport(i32 %5, i32 %7)
  br label %9

9:                                                ; preds = %12, %4
  %10 = call i64 (...) @RecoveryIsPaused()
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = call i32 @pg_usleep(i64 1000000)
  %14 = call i32 (...) @HandleStartupProcInterrupts()
  br label %9

15:                                               ; preds = %3, %9
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errhint(i8*) #1

declare dso_local i64 @RecoveryIsPaused(...) #1

declare dso_local i32 @pg_usleep(i64) #1

declare dso_local i32 @HandleStartupProcInterrupts(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
